--- a/A1/A1_A12105649.ipynb
+++ b/A1/A1_A12105649.ipynb
@@ -62,9 +62,9 @@
     "collapsed": true
    },
    "source": [
-    "My Student ID number is: \n",
-    "\n",
-    "My Github username is: "
+    "My Student ID number is: A12105649\n",
+    "    \n",
+    "My Github username is: ousmani1"
    ]
   },
   {
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": false,
@@ -159,12 +159,14 @@
    "source": [
     "# Write a function that takes two inputs, adds them together, and returns the result. Call it 'add2'\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "def add2(a,b):\n",
+    "    c = a + b\n",
+    "    return c"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": false,
@@ -188,9 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": false,
     "nbgrader": {
      "checksum": "39fb31f6add3ce8748a75c487215d9f4",
@@ -206,12 +208,16 @@
     "# Import the five core python data-science modules, with their typical abbreviations\n",
     "#  {numpy, scipy, pandas, matplotlib.pyplot, sklearn} as {np, sp, pd, plt, skl}\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "import numpy as np\n",
+    "import scipy as sp\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import sklearn as skl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "deletable": false,
